footer and other changes

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
 <body class="m-0 p-0 font-sans">
     <section class="flex flex-row justify-between py-2 px-1 bg-slate-950 ">
         <div class="space-x-4">
-        <a href=""> <i class="fab fa-facebook text-white"></i></a>
-        <a href=""><i class="fab fa-instagram text-white"></i></a>
-        <a href=""> <i class="fab fa-twitter text-white"></i></a>
-        <a href=""><i class="fab fa-youtube text-white"></i></a>
-        <a href=""><i class="fab fa-linkedin text-white"></i></a>
+        <a href="#home"> <i class="fab fa-facebook text-white"></i></a>
+        <a href="#home"><i class="fab fa-instagram text-white"></i></a>
+        <a href="#home"> <i class="fab fa-twitter text-white"></i></a>
+        <a href="#home"><i class="fab fa-youtube text-white"></i></a>
+        <a href="#home"><i class="fab fa-linkedin text-white"></i></a>
         </div>
         <div>
-            <a href=""><i class="fas fa-search text-white"></i></a>
+            <a href="#home"><i class="fas fa-search text-white"></i></a>
             </div>
 
     </section>
+    <section id="home">
 
     <section class="my-20 flex flex-col  text-center space-y-4">
         <p class="text-5xl font-semibold">JANE BLOGLIFE</p>
@@ -47,8 +48,10 @@
   <!-- Left Column: Blog Post -->
   <section class="flex-1  p-4 rounded shadow">
     <div class="bg-white mb-10" >
+      <div class="text-center">
     <p class="text-2xl font-bold mb-2">TITLE HEADING</p>
     <p class="text-lg text-gray-600 mb-4">Title description, May 2, 2016</p>
+    </div>
     <img src="girl_hat.jpg" alt="Blog" class="w-full h-auto rounded mb-4">
     <div class="p-4">
     <p class=" "><b>More Hats!</b> I am crazy about hats these days. Some text about this blog entry. Fashion fashion and mauris.
@@ -64,9 +67,11 @@
 </div>
 </div>
 <div>
-  <div class="bg-white">
+  <div class="bg-white mb-10">
+    <div class="text-center">
     <p class="text-2xl font-bold mb-2">TITLE HEADING</p>
     <p class="text-lg text-gray-600 mb-4">Title description, May 2, 2016</p>
+    </div>
     <img src="girl_hat.jpg" alt="Blog" class="w-full h-auto rounded mb-4">
     <div class="p-4">
     <p class=" "><b>More Hats!</b> I am crazy about hats these days. Some text about this blog entry. Fashion fashion and mauris.
@@ -186,6 +191,12 @@
   </section>
 
 </section>
+</section>
+<footer class="h-52 bg-gray-500">
+  <button  id="#home" class="bg-black text-white hover:bg-black/50 hover:text-black mx-32 mt-20 text-1xl px-6 py-2" >
+    <span class="text-2xl font-extrabold"> ↑ </span>to the top </button>  
+<p class="font-light mx-32 mt-4 "> powered by <span > <u>W3.CSS</u></span> </p>
+</footer>
 
     <script src="index.js"></script>
 </body>
