--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <p class="text-2xl font-bold mb-2">TITLE HEADING</p>
     <p class="text-lg text-gray-600 mb-4">Title description, May 2, 2016</p>
     </div>
-    <img src="girl_hat.jpg" alt="Blog" class="w-full h-auto rounded mb-4">
+    <img src="man_hat.jpg" alt="Blog" class="w-full h-auto rounded mb-4">
     <div class="p-4">
     <p class=" "><b>More Hats!</b> I am crazy about hats these days. Some text about this blog entry. Fashion fashion and mauris.
     Neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat.
@@ -93,7 +93,7 @@
     <p class="text-2xl font-bold mb-2">TITLE HEADING</p>
     <p class="text-lg text-gray-600 mb-4">Title description, May 2, 2016</p>
     </div>
-    <img src="girl_hat.jpg" alt="Blog" class="w-full h-auto rounded mb-4">
+    <img src="runway.jpg" alt="Blog" class="w-full h-auto rounded mb-4">
     <div class="p-4">
     <p class=" "><b>More Hats!</b> I am crazy about hats these days. Some text about this blog entry. Fashion fashion and mauris.
     Neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat.
@@ -193,8 +193,8 @@
 </section>
 </section>
 <footer class="h-52 bg-gray-500">
-  <button  id="#home" class="bg-black text-white hover:bg-black/50 hover:text-black mx-32 mt-20 text-1xl px-6 py-2" >
-    <span class="text-2xl font-extrabold"> ↑ </span>to the top </button>  
+  <a href="#home" class="bg-black text-white hover:bg-black/50 hover:text-black mx-32 mt-20 text-1xl px-6 py-2" >
+    <span class="text-2xl font-extrabold mr-2"> ↑ </span>to the top </a>  
 <p class="font-light mx-32 mt-4 "> powered by <span > <u>W3.CSS</u></span> </p>
 </footer>
 
