--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <div class="flex flex-row  justify-between p-10">
 <button class="px-4 py-1 text-black border  hover:bg-black/50 likebtn " >&#9757 like</button>
-<button class="font-bold py-2 px-4 bg-black text-white hover:text-black  hover:bg-black/50" id="reply">replies</button>
+<button class="font-bold py-2 px-4 bg-black text-white hover:text-black  hover:bg-black/50" id="reply">replies<span class="bg-white text-black p-1 m-1">1</span></button>
 </div>
 </div>
 <div class=" flex flex-row space-x-10  bg-white mb-3 hidden" id="replyOne">
@@ -106,7 +106,7 @@
     </div>
     <div class="flex flex-row  justify-between p-10">
 <button class="px-4 py-1 text-black border  hover:bg-black/50  likebtn"   >&#9757 like</button>
-<button class="font-bold py-2 px-4 bg-black text-white hover:text-black  hover:bg-black/50" id="replyTwo">replies</button>
+<button class="font-bold py-2 px-4 bg-black text-white hover:text-black  hover:bg-black/50" id="replyTwo">replies<span class="bg-white text-black p-1 m-1">2</span></button>
 </div>
 </div>
   </div>
@@ -160,7 +160,7 @@
     </div>
     <div class="flex flex-row  justify-between p-10">
 <button class="px-4 py-1 text-black border  hover:bg-black/50 likebtn "  >&#9757 like</button>
-<button class="font-bold py-2 px-4 bg-black text-white hover:text-black  hover:bg-black/50" id="reply3">replies</button>
+<button class="font-bold py-2 px-4 bg-black text-white hover:text-black  hover:bg-black/50" id="reply3">replies<span class="bg-white text-black p-1 m-1">3</span></button>
 </div>
 </div>
     </div>
