--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="bg-[url('girl_hat.jpg')] bg-cover h-48 w-full"></div>
       <div class="p-4">
         <p class="text-xl font-bold mb-2">My Name</p>
-        <p class="text-sm leading-relaxed">
+        <p class="text-sm leading-relaxed  bg-black text-white px-2 py-2">
           Just me, myself and I, exploring the universe of uknownment.
           I have a heart of love and an interest in lorem ipsum and mauris neque quam blog. 
           I want to share my world with you.
@@ -225,54 +225,26 @@
           <img src="girl_hat.jpg" alt="Post" class="w-12 h-12 object-cover rounded">
           <div>
             <p class="font-semibold">Denim</p>
-            <p class=" text-gray-300">Sed mattis nunc</p>
+            <p class=" text-sm">Sed mattis nunc</p>
           </div>
         </li>
         <li class="flex items-center gap-3">
           <img src="girl_hat.jpg" alt="Post" class="w-12 h-12 object-cover rounded">
           <div>
             <p class="font-semibold">Summer</p>
-            <p class="text-sm text-gray-300">Vivamus fermentum</p>
+            <p class="text-sm ">Vivamus fermentum</p>
           </div>
         </li>
         <li class="flex items-center gap-3">
           <img src="girl_hat.jpg" alt="Post" class="w-12 h-12 object-cover rounded">
           <div>
             <p class="font-semibold">Summer</p>
-            <p class="text-sm text-gray-300">Vivamus fermentum</p>
+            <p class="text-sm ">Vivamus fermentum</p>
           </div>
         </li>
-        <li class="flex items-center gap-3">
-          <img src="girl_hat.jpg" alt="Post" class="w-12 h-12 object-cover rounded">
-          <div>
-            <p class="font-semibold">Summer</p>
-            <p class="text-sm text-gray-300">Vivamus fermentum</p>
-          </div>
-        </li>
-        <li class="flex items-center gap-3">
-          <img src="girl_hat.jpg" alt="Post" class="w-12 h-12 object-cover rounded">
-          <div>
-            <p class="font-semibold">Summer</p>
-            <p class="text-sm text-gray-300">Vivamus fermentum</p>
-          </div>
-        </li>
-
-        <li class="flex items-center gap-3">
-          <img src="girl_hat.jpg" alt="Post" class="w-12 h-12 object-cover rounded">
-          <div>
-            <p class="font-semibold">Summer</p>
-            <p class="text-sm text-gray-300">Vivamus fermentum</p>
-          </div>
-        </li>
+       
 
 
-        <li class="flex items-center gap-3">
-          <img src="girl_hat.jpg" alt="Post" class="w-12 h-12 object-cover rounded">
-          <div>
-            <p class="font-semibold">Summer</p>
-            <p class="text-sm text-gray-300">Vivamus fermentum</p>
-          </div>
-        </li>
         
       </ul>
     </div>
